--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <meta name="keywords" content="indigo, 인디고, 레포츠, reports">
     <meta name="author" content="kim seul ki">
 
+    <!-- 오픈그래픽(카톡, sns같은거 보낼 때 뜨는거) -->
+    <meta property="og:title" content="인디고">
+    <meta property="og:url" content="https://kimsrik.github.io/indigo/">
+    <meta property="og:image" content="./images/og.jpg">
+    <meta property="og:description" content="인디고에서 즐겨찾는 레포츠 정보를 찾아보세요">
+
+    <!-- 트위터카드 -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="인디고">
+    <meta name="twitter:url" content="https://kimsrik.github.io/indigo/">
+    <meta name="twitter:image" content="./images/og.jpg">
+    <meta name="twitter:description" content="인디고에서 즐겨찾는 레포츠 정보를 찾아보세요">
+
     <title>Document</title>
 </head>
 <body>
