--- a/index.html
+++ b/index.html
@@ -23,9 +23,75 @@
     <meta name="twitter:image" content="./images/og.jpg">
     <meta name="twitter:description" content="인디고에서 즐겨찾는 레포츠 정보를 찾아보세요">
 
-    <title>Document</title>
+    <!-- 파비콘 삽입(링크 방식) -->
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+
+    <!--폰트(noto sans kr)-글꼴 삽입(링크 방식) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="./css/reset.css">  
+
+    <title>Indigo</title>
+
+    <!-- style -->
+    <style>
+        :root{
+            font-family: 'Noto Sans KR', sans-serif;
+            font-weight: 400;   /* 여기서 normal은 400 */
+            font-size: 16px;
+            line-height: 29px;
+            color: #616161;
+        }
+
+        /* skip-menu style */
+        .skip-menu a{
+            position: fixed;
+            left: 0;
+            top: -100px;
+            z-index: 10000;
+            /* skip-menu가 중요하기 때문에 가장 높게 z-index를 부여 */
+
+            padding: 10px 20px;
+            background-color: #616161;
+            font-size: 1.4em;
+            color: #fff;
+        }
+
+        /* skip-menu에 있는 a에 focus가 되게 되면 */
+        .skip-menu a:focus{
+            top: 0;
+        }
+
+    </style>
+
 </head>
 <body>
-    
+    <!-- skip-menu -->
+    <div class="skip-menu">
+        <a href="#">we are 바로가기</a>
+        <a href="#">work 바로가기</a>
+        <a href="#">blog 바로가기</a>
+        <a href="#">contact us 바로가기</a>
+    </div>
+    <!-- skip-menu end -->
+
+    <section class="wrap">
+        <header class="header"></header>
+        <section class="sec slider"></section>
+        <section class="sec we-are"></section>
+        <section class="sec divider"></section>
+        <section class="sec work"></section>
+        <section class="sec divider"></section>
+        <section class="sec blog"></section>
+        <section class="sec contact"></section>
+        <section class="sec map"></section>
+        <footer class="footer"></footer>
+    </section>
+
+
+
 </body>
 </html>
