--- a/index.html
+++ b/index.html
@@ -79,16 +79,40 @@
     <!-- skip-menu end -->
 
     <section class="wrap">
-        <header class="header"></header>
-        <section class="sec slider"></section>
-        <section class="sec we-are"></section>
-        <section class="sec divider"></section>
-        <section class="sec work"></section>
-        <section class="sec divider"></section>
-        <section class="sec blog"></section>
-        <section class="sec contact"></section>
-        <section class="sec map"></section>
-        <footer class="footer"></footer>
+        <header class="header">
+            <div class="container">
+                <h1 class="logo">
+                    <a href="index.html">INDIGO</a>
+                </h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">we are</a></li>
+                        <li><a href="#">work</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a href="# ">contact us</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section class="sec slider">
+            <div class="container"></div></section>
+        <section class="sec we-are">
+            <div class="container"></div></section>
+        <section class="sec divider">
+            <div class="container"></div></section>
+        <section class="sec work">
+            <div class="container"></div></section>
+        <section class="sec divider">
+            <div class="container"></div></section>
+        <section class="sec blog">
+            <div class="container"></div></section>
+        <section class="sec contact">
+            <div class="container"></div></section>
+        <section class="sec map">
+            <div class="container"></div></section>
+        <footer class="footer">
+            <div class="container"></div></footer>
     </section>
 
 
