--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
 
     <!--  -->
     <!-- BXSlider -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css"> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 
 
     <!-- CSS Reset -->
-    <!-- <link rel="stylesheet" href="./css/reset.css">   -->
+    <link rel="stylesheet" href="./css/reset.css">
     <!-- Desktop style -->
-    <!-- <link rel="stylesheet" href="./css/desktop.css"> -->
+    <link rel="stylesheet" href="./css/desktop.css">
     <title>Indigo</title>
 
     <!-- style -->
